hard-gists/801265/run.log
=== Docker Run Log for 801265 ===
Started at: Mi 29. Okt 17:36:04 CET 2025

[2025-10-29 17:36:05] START: Running container for 801265
[2025-10-29 17:36:05] SUCCESS: Container 91faeeb8376fb52ccc5b13494240ddea8d1694e578ffc8a7cbf8613bf80521ab started for 801265
=== Container logs for 801265 ===
  File "/snippet.py", line 46
    print x
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 801265 ===
[2025-10-29 17:36:07] INFO: Container 91faeeb8376fb52ccc5b13494240ddea8d1694e578ffc8a7cbf8613bf80521ab has stopped
